[tool.poetry]
name = "rlagent"
version = "0.1.0"
description = ""
authors = ["Ryan Anderson <ryan@anderson.vc>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.3.1"
torchvision = "^0.4.2"
jupyterlab = "^1.2.4"
Pillow = "^6.2.1"
numpy = "^1.18.0"
tensorboard = "^2.1.0"
transformers = "^2.3.0"
tensorboardX = "^1.9"
gym = {extras = ["box2d"], version = "^0.15.4"}
matplotlib = "^3.1.2"
box2d = "^2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"

[tool.poetry.scripts]
cartpole = "rlagent:cartpole"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
