[tool.poetry]
name = "rlagent"
version = "0.1.0"
description = ""
authors = ["Ryan Anderson <ryan@anderson.vc>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
gym = "^0.18.0"
jupyterlab = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
